fix: overflow

--- a/styles/global.css
+++ b/styles/global.css
@@ -5,6 +5,7 @@ body {
 	font-weight: 300;
 	font-size: 20px;
 	margin: 0;
+	overflow-x: hidden;
 }
 
 *,
